--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		<section class="section section-about" id="about">
 			<div class="container">
 				<div class="section-head">
-					<span>Get to know</span>
+					<span></span>
 					<h2>About Me</h2>
 				</div>
 
@@ -113,8 +113,8 @@
 					<div class="col-md-7">
 						<div class="about-desc">
 							<div class="about-desc-content">
-								<h1 class="font-weight-light">I'm Alice Joseph</h1>
-								<p class="mt-3 font-weight-light">Proin laoreet elementum ligula, ac tincidunt lorem accumsan nec. Fusce eget urna ante. Donec massa velit, varius a accumsan ac, tempor iaculis massa. Sed placerat justo sed libero varius vulputate. Ut a mi tempus massa malesuada fermentum.</p>
+								<h1 class="font-weight-light">I'm Aryan Srivastava</h1>
+								<p class="mt-3 font-weight-light">Currently a rising junior at Brown University studying computer science.</p>
 							</div>
 
 							<div class="about-desc-more text-left mt-5">
@@ -123,42 +123,42 @@
 										<div class="about-desc-info">
 											<i class="far fa-calendar-alt" data-toggle="tooltip" data-placement="top" title="Age"></i>
 											<b>Age : </b>
-											<span>19</span>
+											<span>20</span>
 										</div>
 									</div>
 									<div class="col-lg-6">
 										<div class="about-desc-info">
 											<i class="fas fa-map-marked-alt" data-toggle="tooltip" data-placement="top" title="Location"></i>
 											<b>Location : </b>
-											<span>Miami, FL</span>
+											<span>Brown University</span>
 										</div>
 									</div>
 									<div class="col-lg-6">
 										<div class="about-desc-info">
 											<i class="fas fa-graduation-cap" data-toggle="tooltip" data-placement="top" title="Degree"></i>
 											<b>Degree : </b>
-											<span>Master</span>
+											<span>Sc.B Computer Science</span>
 										</div>
 									</div>
 									<div class="col-lg-6">
 										<div class="about-desc-info">
-											<i class="fab fa-skype" data-toggle="tooltip" data-placement="top" title="Skype"></i>
-											<b>Skype : </b>
-											<a href="tel:beingeorge">beingeorge</a>
+											<i class="fab fa-linkedin" data-toggle="tooltip" data-placement="top" title="Skype"></i>
+											<b>Linkedin : </b>
+											<a href="tel:beingeorge">linkedin link</a>
 										</div>
 									</div>
 									<div class="col-lg-6">
 										<div class="about-desc-info">
 											<i class="fas fa-phone-alt" data-toggle="tooltip" data-placement="top" title="Phone"></i>
 											<b>Phone : </b>
-											<a href="tel:0987654321">098-765-4321</a>
+											<a href="tel:0987654321">401-588-0406</a>
 										</div>
 									</div>
 									<div class="col-lg-6">
 										<div class="about-desc-info">
 											<i class="far fa-envelope" data-toggle="tooltip" data-placement="top" title="Mail"></i>
 											<b>Mail : </b>
-											<a href="mailto:hello@beingeorge.com">hello@beingeorge.com</a>
+											<a href="mailto:aryan_srivastava@brown.edu">aryan_srivastava@brown.edu</a>
 										</div>
 									</div>
 
