--- a/index.html
+++ b/index.html
@@ -722,42 +722,6 @@
 							</div>
 						</div>
 					</div>
-					<div class="contact-form mt-5">
-						<form>
-							<h5 class="section-subHead mb-2"> Contact Form</h5>
-							<div class="row">
-								<div class="col-lg-6">
-									<div class="form-group mt-3">
-										<input name="name" id="name" type="text" class="form-control b-box" placeholder="Your Name*" required>
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group mt-3">
-										<input name="email" id="email" type="email" class="form-control b-box" placeholder="Your Email*" required>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-12">
-									<div class="form-group mt-3">
-										<input type="text" class="form-control b-box" id="subject" placeholder="Your Subject.." required/>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-12">
-									<div class="form-group mt-3">
-										<textarea name="comments" id="comments" rows="4" class="form-control b-box" placeholder="Your message..."></textarea>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-lg-12 text-center mt-4 mb-5 ">
-									<a href="#" class="btn hover-state">Submit</a>
-								</div>
-							</div>
-						</form>
-					</div>
 				</div>
 			</div>
 		</section>
@@ -766,7 +730,7 @@
 		<!--START: FOOTER-->
 		<footer class="footer section section-light">
 			<div class="container">
-				<p class="copyright text-center mb-0">&copy; Klee 2020 | All Right Reserved</p>
+				<p class="copyright text-center mb-0">&copy; Aryan Srivastava 2020 | All Right Reserved</p>
 			</div>
 		</footer>
 		<!--END: FOOTER-->
