more little changes

--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#blog">Blog</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                     </ul>
@@ -78,7 +75,7 @@
 
                	<div class="aside-footer">
                 	<ul class="list-unstyled list-inline">
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="list-inline-item"><a href="#"><i class="fab fa-github"></i></a></li>
                         <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                         <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow"></i></a></li>
                         <li class="list-inline-item"><a href="#"><i class="fab fa-dribbble"></i></a></li>
@@ -93,7 +90,7 @@
 
 		<!-- START: HOME -->
     	<section class="section-home " id="home">
-    		<div class="glass">Alice Joseph</div>
+    		<div class="glass">Aryan Srivastava</div>
     		<!-- <img src="assets/images/banner.jpg" /> -->
     	</section>
     	<!-- END: HOME -->
@@ -103,17 +100,17 @@
 			<div class="container">
 				<div class="section-head">
 					<span></span>
-					<h2>About Me</h2>
+					<h1>About Me</h1>
 				</div>
 
 				<div class="row justify-content-center align-items-center">
 					<div class="col-md-5">
-						<img class="img-fluid img-thumbnail" src="assets/images/avatar.jpg" alt="About Picture">
+						<img class="img-fluid img-thumbnail" src="assets/images/ary2.jpeg" alt="About Picture">
 					</div>
 					<div class="col-md-7">
 						<div class="about-desc">
 							<div class="about-desc-content">
-								<h1 class="font-weight-light">I'm Aryan Srivastava</h1>
+								<h2 class="font-weight-light">I'm Aryan Srivastava</h2>
 								<p class="mt-3 font-weight-light">Currently a rising junior at Brown University studying computer science.</p>
 							</div>
 
@@ -525,22 +522,6 @@
 		<!--END: WORK -->
 		<br>
 		<br>
-		<!-- START: CTA -->
-		<section class="section section-freelance section-light text-center ">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="section-head ">
-							<h2>Let's work together!</h2>
-						</div>
-						<div class="mt-5">
-							<a href="#" class="btn hover-state">Hire Me!</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END: CTA -->
 
 		<!-- START: BLOG -->
 		<section class="section section-dark section-blog" id="blog">
