--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
 			<nav class="navbar text-center align-items-center justify-content-center">
 
                 <div class="collapse navbar-collapse show" id="navbarCollapse">
-                	<div class="about-avatar mb-4">
-						<img src="assets/images/about.jpg" alt="" class="img-fluid mx-auto d-block shadow-sm rounded-full">
-					</div>
+
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item active">
                             <a class="nav-link" href="#home">Home</a>
@@ -72,9 +70,9 @@
 
                	<div class="aside-footer">
                 	<ul class="list-unstyled list-inline">
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-github"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                        <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow"></i></a></li>
+                        <li class="list-inline-item"><a href="https://github.com/aryan096"><i class="fab fa-github"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/aryan-s-b58598129/"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.facebook.com/aryansrivastava096"><i class="fab fa-facebook"></i></a></li>
                         <li class="list-inline-item"><a href="#"><i class="fab fa-dribbble"></i></a></li>
                     </ul>
                 </div>
@@ -153,7 +151,7 @@
 		<section class="section section-resume" id="resume">
 			<div class="container">
 				<div class="section-head">
-					<span>What I Do</span>
+					<span></span>
 					<h2>Experience</h2>
 				</div>
 
@@ -222,7 +220,7 @@
 
 					<li class="col-md-4 list-item">
 						<figure>
-							<img src="assets/images/p1-1.jpg" alt="p1">
+							<img src="assets/images/weenix_screens/main.png" alt="p1">
 							<figcaption>
 								<a href="blogs/weenix.html" class=""></a>
 								<div class="caption-inner">
@@ -262,13 +260,11 @@
 			</div>
 		</section>
 		<!--END: WORK -->
-		<br>
-		<br>
 		<!-- START: CONTACT -->
 		<section class="section section-contact" id="contact">
 			<div class="container">
 				<div class="section-head">
-					<span>say Hello</span>
+					<span></span>
 					<h2>Contact </h2>
 				</div>
 			</div>
@@ -276,7 +272,7 @@
 			<div class="contact-Otherdetails section-dark">
 				<div class="container">
 					<div class="contact-details">
-						<h5 class="section-subHead mb-4"> Get in Touch</h5>
+						<h5 class="section-subHead mb-4"></h5>
 						<div class="row">
 							<div class="col-sm-6 col-lg-6">
 								<div class="contact-details--panel p-4 b-box text-center hover-state">
@@ -284,8 +280,8 @@
 										<i class="fas fa-mobile-alt  "></i>
 									</div>
 									<div class="mt-2">
-										<a href="tel:9876543210" class="">+987 654 3210</a>
-										<p class="mt-2">Call Us</p>
+										<a href="tel:4014880406" class="+1 401-588-0406">+1 401-588-0406</a>
+										<p class="mt-2">Phone Number</p>
 									</div>
 								</div>
 							</div>
@@ -295,8 +291,8 @@
 										<i class="fas fa-envelope  "></i>
 									</div>
 									<div class="mt-2">
-										<a href="mailto:hello@beingeorge.com">hello@beingeorge.com</a>
-										<p class="mt-2">Email Us</p>
+										<a href="mailto:aryan_srivastava@brown.edu">aryan_srivastava@brown.edu</a>
+										<p class="mt-2">Email</p>
 									</div>
 								</div>
 							</div>
