--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Aryan Srivastava</title>
-	<meta name="description" content="I am Aryan Srivastava" />
+	<meta name="description" content="I am Aryan" />
 	<meta name="keywords" content="blog resume portfolio student brown university computer science" />
 	<meta name="author" content="aryan096" />
 	<meta name="theme-color" content="#ffffff">
