--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@
 
 					<li class="col-md-4 list-item">
 						<figure>
-							<img src="assets/images/p3-3.jpg" alt="p3">
+							<img src="assets/images/where2cit/list.png" alt="p3">
 							<figcaption>
-								<a href="#" class=""></a>
+								<a href="blogs/where2cit.html" class=""></a>
 								<div class="caption-inner">
-									<h3 class="portfolio-item-title">Some work</h3>
-									<div class="portfolio-item-desc">Image</div>
+									<h3 class="portfolio-item-title">Where2CIT</h3>
+									<div class="portfolio-item-desc">Live feed of machine usage in the CIT.</div>
 								</div>
 							</figcaption>
 						</figure>
