--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
 					<li class="col-md-4 list-item">
 						<figure>
-							<img src="assets/images/where2cit/list.png" alt="p3">
+							<img src="assets/images/where2cit/list.png" style="filter: brightness(70%)" alt="p3">
 							<figcaption>
 								<a href="blogs/where2cit.html" class=""></a>
 								<div class="caption-inner">
@@ -257,6 +257,23 @@
 						</figure>
 					</li>
 				</ul><!-- .projects-container -->
+
+				<ul class="list-items-container row">
+
+					<li class="col-md-4 list-item">
+						<figure>
+							<img src="assets/images/oyespace/amenities.png" style="filter: brightness(70%);" alt="p1">
+							<figcaption>
+								<a href="blogs/oyespace.html" class=""></a>
+								<div class="caption-inner">
+									<h3 class="portfolio-item-title">Weenix</h3>
+									<div class="portfolio-item-desc">A Wee implementation of Unix</div>
+								</div>
+							</figcaption>
+						</figure>
+					</li>
+				</ul><!-- .projects-container -->
+
 			</div>
 		</section>
 		<!--END: WORK -->
