--- a/index.html
+++ b/index.html
@@ -266,8 +266,21 @@
 							<figcaption>
 								<a href="blogs/oyespace.html" class=""></a>
 								<div class="caption-inner">
-									<h3 class="portfolio-item-title">Weenix</h3>
-									<div class="portfolio-item-desc">A Wee implementation of Unix</div>
+									<h3 class="portfolio-item-title">OyeSpace</h3>
+									<div class="portfolio-item-desc">Summer 2019 Product Development and Innovation</div>
+								</div>
+							</figcaption>
+						</figure>
+					</li>
+
+					<li class="col-md-4 list-item">
+						<figure>
+							<img src="assets/images/faiza.jpg" style="filter: brightness(70%);" alt="p1">
+							<figcaption>
+								<a href="blogs/friends.html" class=""></a>
+								<div class="caption-inner">
+									<h3 class="portfolio-item-title">Friends in Ink</h3>
+									<div class="portfolio-item-desc">Ink Portraits of Friends</div>
 								</div>
 							</figcaption>
 						</figure>
