new blogs and phone fix

--- a/index.html
+++ b/index.html
@@ -233,6 +233,19 @@
 
 					<li class="col-md-4 list-item">
 						<figure>
+							<img src="assets/images/api_cover.png" style="filter: brightness(70%);" alt="p1">
+							<figcaption>
+								<a href="blogs/ganglia.html" class=""></a>
+								<div class="caption-inner">
+									<h3 class="portfolio-item-title">Ganglia Feed API</h3>
+									<div class="portfolio-item-desc">Serving information about Brown CS Machines</div>
+								</div>
+							</figcaption>
+						</figure>
+					</li>
+<!-- 
+					<li class="col-md-4 list-item">
+						<figure>
 							<img src="assets/images/covid_camp_cover.jpg" alt="covid">
 							<figcaption>
 								<a href="blogs/covid_camping.html" class=""></a>
@@ -242,7 +255,7 @@
 								</div>
 							</figcaption>
 						</figure>
-					</li>
+					</li> -->
 
 					<li class="col-md-4 list-item">
 						<figure>
@@ -275,6 +288,19 @@
 
 					<li class="col-md-4 list-item">
 						<figure>
+							<img src="assets/images/BRIC_Logo.jpg" style="filter: brightness(70%); max-width: 800px; width: 400px; margin-left: -35px;" alt="p1">
+							<figcaption>
+								<a href="blogs/bric.html" class=""></a>
+								<div class="caption-inner">
+									<h3 class="portfolio-item-title">BRIC</h3>
+									<div class="portfolio-item-desc">Brown RISD Innovation Community</div>
+								</div>
+							</figcaption>
+						</figure>
+					</li>
+
+					<li class="col-md-4 list-item">
+						<figure>
 							<img src="assets/images/faiza.jpg" style="filter: brightness(70%);" alt="p1">
 							<figcaption>
 								<a href="blogs/friends.html" class=""></a>
@@ -285,6 +311,8 @@
 							</figcaption>
 						</figure>
 					</li>
+
+
 				</ul><!-- .projects-container -->
 
 			</div>
