more phone fixes

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 					<div class="col-md-7">
 						<div class="about-desc">
 							<div class="about-desc-content">
-								<h2 class="font-weight-light">I'm Aryan Srivastava</h2>
-								<p class="mt-3 font-weight-light">I am studying Computer Science at Brown University<br><br>
+								<h2 class="font-weight-light">Hi!</h2>
+								<p class="mt-3 font-weight-light">I am Aryan Srivastava, a junior at Brown University studying Computer Science.<br><br>
 									My primary interests are in systems design, distributed systems, and product development and innovation. I am currently working as a Systems Programmer, Operator, and Consultant at Brown University CS, and
 									designing the curriculum for Brown RISD Innovation Community as one of the founding leaders.<br><br>
 									I love painting, sketching, photography, and anything that helps me create visually appealing and meaningful work. Other hobbies include backpacking and camping, basketball, and gaming.<br><br>
