more phone fixes

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		<!-- START: HOME -->
     	<section class="section-home " id="home">
     		<div class="glass">Aryan Srivastava</div>
-    		<img src="assets/images/cover-2.jpg" />
+    		<img src="assets/images/cover-2-ink.jpeg" />
     	</section>
     	<!-- END: HOME -->
 
