--- a/index.html
+++ b/index.html
@@ -162,21 +162,28 @@
 							<div>
 								<h5>Systems Programmer, Operator, and Consultant</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">2020 - Present | Brown University CS.</h6>
-								<p>Collaborate with creative and development teams on the execution of ideas.</p>
+								<p> <span style="color: white;"> > </span> Created an API to serve live location, connection, and usage information about machines in the CS department. <br>
+									<span style="color: white;"> > </span> Created a command line interface for this API on the filesystem. <br>
+									<span style="color: white;"> > </span> Helped implement a remote Brown CS Linux build for use by students and faculty during COVID-19 lab closures. 
+									</p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4">
 							<div>
 								<h5>Product Development and Innovation Intern</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">2019 Summer | OyeSpace.</h6>
-								<p>Collaborate with creative and development teams on the execution of ideas.</p>
+								<p><span style="color: white;"> > </span> Conducted extensive market research for the company’s gated community security system. <br>
+									<span style="color: white;"> > </span> Created and presented new features mockups, which were later adopted for development.
+									</p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4">
 							<div>
 								<h5>Undergraduate Teaching Assistant</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">2019 - 2020 | Brown University CS.</h6>
-								<p>Collaborate with creative and development teams on the execution of ideas.</p>
+								<p><span style="color: white;"> > </span> UTA for CS0110 - Computing Foundations: Data, and CS0040 - Introduction to Scientific Computing & Problem Solving <br>
+									<span style="color: white;"> > </span> Responsible for grading homeworks, holding TA hours, and creating course content. 
+									</p>
 							</div>
 						</div>
 					</div>
@@ -186,7 +193,7 @@
 						<div class="resume-list b-box hover-state p-4 mt-4">
 							<div>
 								<h5>Brown University</h5>
-								<h6 class="badge badge-dark d-inline-block my-3">2018-2022</h6>
+								<h6 class="badge badge-dark d-inline-block my-3">Sc.B Computer Science | 2018-2022</h6>
 								<p>Sc.B Computer Science | Rising Junior</p>
 							</div>
 						</div>
