--- a/index.html
+++ b/index.html
@@ -194,14 +194,27 @@
 							<div>
 								<h5>Brown University</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">Sc.B Computer Science | 2018-2022</h6>
-								<p>Sc.B Computer Science | Rising Junior</p>
+								<p>
+									<span style="color: white;"> > </span> Founding Team Member - Brown RISD Innovation Community<br>
+									<span style="color: white;"> > </span> Brown Outdoor Leadership Traning Leader <br>
+									<span style="color: white;"> > </span> Business Manager - Brown Barsaat <br>
+									<span style="color: white;"> > </span> Systems Programmer, Operator, and Consultant<br>
+									<span style="color: white;"> > </span> Innovation Dojo Cohort Member - Fall 2018<br>
+
+								</p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4">
 							<div>
 								<h5>Delhi Public School, Eldeco, Lucknow, India</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">2007-2018</h6>
-								<p></p>
+								<p>
+									<span style="color: white;"> > </span> Science Stream - Computer Science, Physics, Chemistry, Math, English <br>
+									<span style="color: white;"> > </span> Founder and President - Young Entrepreneurs' Club <br>
+									<span style="color: white;"> > </span> Cultural Captain of the School 2017-18 <br>
+									<span style="color: white;"> > </span> Secretary General - DPSEMUN 2017 <br>
+									<span style="color: white;"> > </span> MUN Club President 2017 
+								</p>
 							</div>
 						</div>
 					</div>
