--- a/index.html
+++ b/index.html
@@ -257,25 +257,12 @@
 							<figcaption>
 								<a href="blogs/ganglia.html" class=""></a>
 								<div class="caption-inner">
-									<h3 class="portfolio-item-title">Ganglia Feed API</h3>
-									<div class="portfolio-item-desc">Serving information about Brown CS Machines</div>
+									<h3 class="portfolio-item-title">Gopher Feed API</h3>
+									<div class="portfolio-item-desc">Serving usage information about Brown CS Machines</div>
 								</div>
 							</figcaption>
 						</figure>
 					</li>
-<!-- 
-					<li class="col-md-4 list-item">
-						<figure>
-							<img src="assets/images/covid_camp_cover.jpg" alt="covid">
-							<figcaption>
-								<a href="blogs/covid_camping.html" class=""></a>
-								<div class="caption-inner">
-									<h3 class="portfolio-item-title">COVID Camping</h3>
-									<div class="portfolio-item-desc">Trapped in a dorm.</div>
-								</div>
-							</figcaption>
-						</figure>
-					</li> -->
 
 					<li class="col-md-4 list-item">
 						<figure>
@@ -314,6 +301,19 @@
 								<div class="caption-inner">
 									<h3 class="portfolio-item-title">BRIC</h3>
 									<div class="portfolio-item-desc">Brown RISD Innovation Community</div>
+								</div>
+							</figcaption>
+						</figure>
+					</li>
+
+					<li class="col-md-4 list-item">
+						<figure>
+							<img src="assets/images/gangliaplugin.png" style="filter: brightness(70%);" alt="p1">
+							<figcaption>
+								<a href="blogs/gangliaplugin.html" class=""></a>
+								<div class="caption-inner">
+									<h3 class="portfolio-item-title">Ganglia Plugin</h3>
+									<div class="portfolio-item-desc">Plugin to monitor console users on Brown CS computers</div>
 								</div>
 							</figcaption>
 						</figure>
