--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 							<ul class="about-social mb-0 list-inline mt-4">
 								<li class="list-inline-item">
-									<a href="#" class="btn downloadCV hover-state">
+									<a href="/assets/resume/AryanSrivastavaResume.pdf" class="btn downloadCV hover-state">
 										<i class="fas fa-download"></i>
 										<span>Download CV</span>
 									</a>
