changed CV to resume

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 								<li class="list-inline-item">
 									<a href="/assets/resume/AryanSrivastavaResume.pdf" class="btn downloadCV hover-state">
 										<i class="fas fa-download"></i>
-										<span>Download CV</span>
+										<span>Download Resume</span>
 									</a>
 								</li>
 							</ul>
