--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
 								<h6 class="badge badge-dark d-inline-block my-3">2020 - Present | Brown University CS.</h6>
 								<p> <span style="color: white;"> > </span> Created an API to serve live location, connection, and usage information about machines in the CS department. <br>
 									<span style="color: white;"> > </span> Created a command line interface for this API on the filesystem. <br>
+									<span style="color: white;"> > </span> Created a web-app for the Brown CS website to display live machine availability using Django. This can be used extensively by students, faculty, and staff to find free 
+										machines in the labs, as well as monitor the broken ones to streamline fixing.<br>
 									<span style="color: white;"> > </span> Helped implement a remote Brown CS Linux build for use by students and faculty during COVID-19 lab closures. 
 									</p>
 							</div>
@@ -195,10 +197,10 @@
 								<h5>Brown University</h5>
 								<h6 class="badge badge-dark d-inline-block my-3">Sc.B Computer Science | 2018-2022</h6>
 								<p>
-									<span style="color: white;"> > </span> Founding Team Member - Brown RISD Innovation Community<br>
+									<span style="color: white;"> > </span> Co-Chair - Brown RISD Innovation Community<br>
 									<span style="color: white;"> > </span> Brown Outdoor Leadership Traning Leader <br>
+									<span style="color: white;"> > </span> Systems Programmer, Operator, and Consultant<br> 
 									<span style="color: white;"> > </span> Business Manager - Brown Barsaat <br>
-									<span style="color: white;"> > </span> Systems Programmer, Operator, and Consultant<br>
 									<span style="color: white;"> > </span> Innovation Dojo Cohort Member - Fall 2018<br>
 
 								</p>
@@ -320,13 +322,13 @@
 					</li>
 
 					<li class="col-md-4 list-item">
-						<figure>
-							<img src="assets/images/faiza.jpg" style="filter: brightness(70%);" alt="p1">
+						<figure class="myhomefigure">
+							<img src="assets/images/myhomecover.png" style="filter: brightness(70%);" alt="p1">
 							<figcaption>
-								<a href="blogs/friends.html" class=""></a>
+								<a href="blogs/myhomethatday.html" class=""></a>
 								<div class="caption-inner">
-									<h3 class="portfolio-item-title">Friends in Ink</h3>
-									<div class="portfolio-item-desc">Ink Portraits of Friends</div>
+									<h3 class="portfolio-item-title">My home that day.</h3>
+									<div class="portfolio-item-desc">A view of our planet in the past through images</div>
 								</div>
 							</figcaption>
 						</figure>
